changed some home html, started login page

--- a/about.html
+++ b/about.html
@@ -50,8 +50,37 @@
 
           <div class="container">
             <h1> About our hotel </h1>
-            <p> This is a world class hotel something ... blah blah! </p>
-          </div>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-m-6">
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum l
+                  igula et dui convallis lobortis. Cras quis vulputate odio. Etiam at erat mi.
+                  Phasellus tempus fringilla scelerisque. Aenean congue scelerisque ligula,
+                  interdum mattis nibh fermentum ut. Donec ipsum velit, varius sed enim feugiat,
+                   gravida fringilla neque. Donec ornare commodo tortor non sodales. Quisque vel porta sem,
+                   ac molestie diam. Aliquam eu justo elementum, dictum eros eget, consectetur neque. Cras varius viverra
+                   ipsum id mollis. Donec pharetra, enim et sollicitudin venenatis, ipsum velit cursus eros, a faucibus tortor
+                   ante et turpis.
+                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum l
+                     igula et dui convallis lobortis. Cras quis vulputate odio. Etiam at erat mi.
+                     Phasellus tempus fringilla scelerisque. Aenean congue scelerisque ligula,
+                     interdum mattis nibh fermentum ut. Donec ipsum velit, varius sed enim feugiat,
+                      gravida fringilla neque. Donec ornare commodo tortor non sodales. Quisque vel porta sem,
+                      ac molestie diam. Aliquam eu justo elementum, dictum eros eget, consectetur neque. Cras varius viverra
+                      ipsum id mollis. Donec pharetra, enim et sollicitudin venenatis, ipsum velit cursus eros, a faucibus tortor
+                      ante et turpis.
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum l
+                        igula et dui convallis lobortis. Cras quis vulputate odio. Etiam at erat mi.
+                        Phasellus tempus fringilla scelerisque. Aenean congue scelerisque ligula,
+                        interdum mattis nibh fermentum ut. Donec ipsum velit, varius sed enim feugiat,
+                         gravida fringilla neque. Donec ornare commodo tortor non sodales. Quisque vel porta sem,
+                         ac molestie diam. Aliquam eu justo elementum, dictum eros eget, consectetur neque. Cras varius viverra
+                         ipsum id mollis. Donec pharetra, enim et sollicitudin venenatis, ipsum velit cursus eros, a faucibus tortor
+                         ante et turpis.
+                 </p>
+                </div>
+              </div>
+            </div>
 
 
 
