--- a/createReservation.html
+++ b/createReservation.html
@@ -87,7 +87,7 @@
           </fieldset>
           <fieldset class="form-group">
             <label for="roomPackage">Select a Package</label>
-            <select multiple class="form-control" id="roomPackage">
+            <select class="form-control" id="roomPackage">
               <option>1. King size package</option>
               <option>2. Queen size package</option>
               <option>3. Double size package</option>
