--- a/home.html
+++ b/home.html
@@ -6,8 +6,9 @@
   <title> Gold Coast Hotel </title>
 </head>
 <body>
+  <!-- header -->
   <!-- original -->
-      <div class="container">
+  <div class="container">
         <nav class="navbar navbar-default">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -18,11 +19,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="home.html">HMS</a>
+              <a class="navbar-brand" href="index.html">HMS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse navbar-default" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="about.html">About</a></li>
@@ -54,120 +55,81 @@
             <p> We specialise in the best holiday accomodation possible! </p>
           </div>
         </div>
-
-          <section id="todo"> 
-            <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>What we do</h2>
-                    <hr class="star-primary">
-                </div>
-            </div> 
-
-            <!-- start of the tiles --> 
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
               </div>
 
-          </section>
 
 
 
+<div class="container">
         <div class="row">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="thumbnail">
               <img src="https://pixabay.com/static/uploads/photo/2015/07/05/13/44/beach-832346_960_720.jpg" alt="...">
-              <div class="caption">
-                <h3>Relax on a beach house</h3>
+              <div class="caption text-center">
+                <h3>Relax on at a nice beach house</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Book Now!</a> </p>
               </div>
-            </div>  
+            </div>
           </div>
 
-          <div class="col-sm-6 col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="thumbnail">
               <img src="https://pixabay.com/static/uploads/photo/2016/01/30/02/22/people-1169019_960_720.jpg" alt="...">
-              <div class="caption">
+              <div class="caption text-center">
                 <h3>Plenty of festivals and things to do!</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Learn more Now!</a></p>
               </div>
-            </div>  
+            </div>
           </div>
 
-          <div class="col-sm-6 col-md-4">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="thumbnail">
               <img src="https://pixabay.com/static/uploads/photo/2015/09/02/13/10/pineapples-918921_960_720.jpg" alt="...">
-              <div class="caption">
+              <div class="caption text-center">
                 <h3>Tropical fresh paradise everywhere you go!</h3>
                 <p>...</p>
                 <p><a href="#" class="btn btn-primary" role="button">Explore more!</a></p>
               </div>
-            </div>  
+            </div>
           </div>
-        </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <img src="https://pixabay.com/static/uploads/photo/2015/07/05/13/44/beach-832346_960_720.jpg" alt="...">
+                    <div class="caption text-center">
+                      <h3>Relax on at a nice beach house</h3>
+                      <p>...</p>
+                      <p><a href="#" class="btn btn-primary" role="button">Book Now!</a> </p>
+                    </div>
+                  </div>
+                </div>
 
+                <div class="col-xs-12 col-sm-6  col-md-4">
+                  <div class="thumbnail">
+                    <img src="https://pixabay.com/static/uploads/photo/2016/01/30/02/22/people-1169019_960_720.jpg" alt="...">
+                    <div class="caption text-center">
+                      <h3>Plenty of festivals and things to do!</h3>
+                      <p>...</p>
+                      <p><a href="#" class="btn btn-primary" role="button">Learn more Now!</a></p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                  <div class="thumbnail">
+                    <img src="https://pixabay.com/static/uploads/photo/2015/09/02/13/10/pineapples-918921_960_720.jpg" alt="...">
+                    <div class="caption text-center">
+                      <h3>Tropical fresh paradise everywhere you go!</h3>
+                      <p>...</p>
+                      <p><a href="#" class="btn btn-primary" role="button">Explore more!</a></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 </body>
+<footer></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </html>
