--- a/login.html
+++ b/login.html
@@ -50,7 +50,28 @@
 
       <!-- /.new container  -->
       <div class= "container">
-        <h1> Log in page! </h1>
+        <div class="row">
+          <div class="col-md-4">
+          <h1> Log in page! </h1>
+        </div>
+        <div class="col-md-8">
+          <div class="jumbotron">
+            <form>
+              <fieldset class="form-group">
+                  <label for="Username">Username</label>
+                  <input type="Username" class="form-control" id="Username" placeholder="Enter first name">
+                </fieldset>
+              <fieldset class="form-group">
+                  <label for="Password">Password</label>
+                  <input type="Password" class="form-control" id="Password" placeholder="Enter first name">
+                </fieldset>
+                <fieldset class="form-group">
+                  <input type="button" name="name" class="btn btn-primary form-control text-center" value="Login">
+                </fieldset>
+            </form>
+          </div>
+        </div>
+        </div>
       </div>
 
 </body>
